1、修改日志压缩字符 2、字符压缩解压